--- a/site/.env
+++ b/site/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:0tG39lhqBqmrL5GnpDwXc1TgIXKX1xisa7hNmvvIqD4=
+APP_KEY=base64:FhZwD80de7AuM6ErSqJ4Vz8DcSPVmcdROn1faYWMQKE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=challenge
-DB_USERNAME=projet-dev
-DB_PASSWORD=dev
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
