--- a/site/.gitignore
+++ b/site/.gitignore
@@ -3,7 +3,9 @@
 /public/storage
 /storage/*.key
 /app/config/database.php
+/config/database.php
 .env.backup
+.env
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
